--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Flipper || Simple</title>
     <!-- styles-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
     <nav>
@@ -23,6 +23,15 @@
             </ul>
         </div>
     </nav>
+    <main>
+        <div class="container">
+            <h2>Background color : <span class="color">
+                #f1f5f8
+                </span>
+            </h2>
+            <button class=" btn btn-hero" id="btn">Click Me</button>
+        </div>
+    </main>
     <h1>color flipper</h1>
     <!-- javascript -->
     <script src="app.js"></script>
