--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Flipper || Simple</title>
     <!-- styles-->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <nav>
@@ -29,7 +29,7 @@
                 #f1f5f8
                 </span>
             </h2>
-            <button class=" btn btn-hero" id="btn">Click Me</button>
+            <button class="btn btn-hero" id="btn">Click Me</button>
         </div>
     </main>
     <h1>color flipper</h1>
